EX4 PART WAY THROUGH

--- a/Exercises/02 Exercises.ipynb
+++ b/Exercises/02 Exercises.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -35,10 +35,41 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What was the score?\n",
+      "72\n",
+      "What Grade is this ?\n",
+      "Good!\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "raw_score = 72\n",
+    "\n",
+    "if raw_score < 0 or raw_score > 100:\n",
+    "    print (\"wrong score\")\n",
+    "if raw_score >= 0 and raw_score <= 100:  \n",
+    "    print (\"What was the score?\")\n",
+    "    print (raw_score)\n",
+    "    if raw_score >= 82:\n",
+    "        print (\"What Grade is this ?\")\n",
+    "        print (\"Excellent!\")\n",
+    "    elif raw_score >= 76.5 and raw_score < 82:\n",
+    "        print (\"What Grade is this ?\")\n",
+    "        print (\"Very Good!\")\n",
+    "    elif raw_score >= 66 and raw_score < 76.5:\n",
+    "        print (\"What Grade is this ?\")\n",
+    "        print (\"Good!\")\n",
+    "    elif raw_score >= 66 and raw_score < 45:\n",
+    "        print (\"What Grade is this ?\")\n",
+    "        print (\"Need Improvement!\")\n",
+    "    elif raw_score >= 45: \n",
+    "        print (\"What Grade is this ?\")\n",
+    "        print (\"Did you try?\")\n"
    ]
   },
   {
@@ -97,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -110,7 +141,29 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 4.5 -0.375\n",
+      "1 5.25 12.328125\n",
+      "2 4.875 4.763671875\n",
+      "3 4.6875 1.910888671875\n",
+      "4 4.59375 0.699554443359375\n",
+      "5 4.546875 0.14548873901367188\n",
+      "6 4.5234375 -0.11891412734985352\n",
+      "7 4.53515625 0.01224285364151001\n",
+      "8 4.529296875 -0.053596146404743195\n",
+      "9 4.5322265625 -0.020741849206387997\n",
+      "10 4.53369140625 -0.0042658079182729125\n",
+      "11 4.534423828125 0.003984444148954935\n",
+      "12 4.5340576171875 -0.0001417014154867502\n",
+      "13 4.53424072265625 0.0019211164656098845\n",
+      "14 4.534149169921875 0.0008896438020826736\n"
+     ]
+    }
+   ],
    "source": [
     "# Initial end points\n",
     "x0 = 3.0\n",
@@ -125,8 +178,12 @@
     "    f0 = x0**3 - 6*x0**2 + 4*x0 + 12\n",
     "    f = x_mid**3 - 6*x_mid**2 + 4*x_mid + 12\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    if f0*f < 0: \n",
+    "       x0= x0\n",
+    "       x1 = (x0 + x1)/2\n",
+    "    elif f0*f > 0:\n",
+    "         x0 = (x0 + x1)/2\n",
+    "         x1 = x1 \n",
     "\n",
     "    print(n, x_mid, f)"
    ]
@@ -167,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -180,7 +237,19 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x_mid' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\maxab\\PartIA-Computing-Michaelmas\\Exercises\\02 Exercises.ipynb Cell 8\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/maxab/PartIA-Computing-Michaelmas/Exercises/02%20Exercises.ipynb#ch0000007?line=9'>10</a>\u001b[0m \u001b[39mwhile\u001b[39;00m error \u001b[39m>\u001b[39m tol:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/maxab/PartIA-Computing-Michaelmas/Exercises/02%20Exercises.ipynb#ch0000007?line=10'>11</a>\u001b[0m    \u001b[39m# Evaluate function at left end-point and at midpoint\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/maxab/PartIA-Computing-Michaelmas/Exercises/02%20Exercises.ipynb#ch0000007?line=11'>12</a>\u001b[0m     f0 \u001b[39m=\u001b[39m x0\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m3\u001b[39m \u001b[39m-\u001b[39m \u001b[39m6\u001b[39m\u001b[39m*\u001b[39mx0\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m \u001b[39m+\u001b[39m \u001b[39m4\u001b[39m\u001b[39m*\u001b[39mx0 \u001b[39m+\u001b[39m \u001b[39m12\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/maxab/PartIA-Computing-Michaelmas/Exercises/02%20Exercises.ipynb#ch0000007?line=12'>13</a>\u001b[0m     f \u001b[39m=\u001b[39m x_mid\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m3\u001b[39m \u001b[39m-\u001b[39m \u001b[39m6\u001b[39m\u001b[39m*\u001b[39mx_mid\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m \u001b[39m+\u001b[39m \u001b[39m4\u001b[39m\u001b[39m*\u001b[39mx_mid \u001b[39m+\u001b[39m \u001b[39m12\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/maxab/PartIA-Computing-Michaelmas/Exercises/02%20Exercises.ipynb#ch0000007?line=14'>15</a>\u001b[0m     \u001b[39mif\u001b[39;00m f0\u001b[39m*\u001b[39mf \u001b[39m<\u001b[39m \u001b[39m0\u001b[39m: \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/maxab/PartIA-Computing-Michaelmas/Exercises/02%20Exercises.ipynb#ch0000007?line=15'>16</a>\u001b[0m        x0\u001b[39m=\u001b[39m x0\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'x_mid' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Initial end points\n",
     "x0 = 3.0\n",
@@ -192,11 +261,19 @@
     "# Iterate until tolerance is met\n",
     "counter = 0\n",
     "while error > tol:\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "   # Evaluate function at left end-point and at midpoint\n",
+    "    f0 = x0**3 - 6*x0**2 + 4*x0 + 12\n",
+    "    f = x_mid**3 - 6*x_mid**2 + 4*x_mid + 12\n",
+    "    \n",
+    "    if f0*f < 0: \n",
+    "       x0= x0\n",
+    "       x1 = (x0 + x1)/2\n",
+    "    elif f0*f > 0:\n",
+    "         x0 = (x0 + x1)/2\n",
+    "         x1 = x1 \n",
     "\n",
     "    # Guard against an infinite loop\n",
-    "    if counter > 1000:\n",
+    "    if counter > 40:\n",
     "        print(\"Oops, iteration count is very large. Breaking out of while loop.\")\n",
     "        break\n",
     "    \n",
@@ -411,7 +488,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('IA-mich')",
    "language": "python",
    "name": "python3"
   },
@@ -425,7 +502,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "683dfc3a7861fe4e99384bd2289c4f961ddf182f3a6be0aa1c496e594572dcb7"
+   }
   }
  },
  "nbformat": 4,
