--- a/03 Types, type conversions and floating point arithmetic.ipynb
+++ b/03 Types, type conversions and floating point arithmetic.ipynb
@@ -94,19 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'bool'>\n",
-      "<class 'int'>\n",
-      "<class 'float'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = True\n",
     "print(type(x))\n",
@@ -139,17 +129,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True <class 'bool'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = True\n",
     "b = False\n",
@@ -183,18 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is a string.\n",
-      "<class 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_string = \"This is a string.\"\n",
     "print(my_string)\n",
@@ -210,21 +183,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "i\n",
-      "<class 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "my_string = \"This is a string.\"\n",
     "# Get 3rd character (Python counts from zero)\n",
-    "s2 = my_string[2]\n",
+    "s2 = my_string[8]\n",
     "print(s2)\n",
     "print(type(s2))"
    ]
@@ -238,19 +203,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This i\n",
-      "<class 'str'>\n",
-      "ing.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get first six characters, print and check type\n",
     "s3 = my_string[0:6]\n",
@@ -271,17 +226,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My name is: Joanne\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "introduction = \"My name is:\"\n",
     "name = \"Joanne\"\n",
@@ -299,18 +246,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "introduction = \"My name is:\"\n",
+    "name = \"Joanne\"\n",
+    "\n",
+    "personal_introduction = introduction + \" \" + name\n",
+    "print(personal_introduction)\n",
     "print(len(personal_introduction))"
    ]
   },
@@ -347,17 +291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 2\n",
     "print(type(a))"
@@ -372,17 +308,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'float'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 2.0\n",
     "print(type(a))"
@@ -419,18 +347,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 8\n",
     "print(type(a))\n",
@@ -446,18 +365,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "68719476736\n",
-      "37\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "b = a**12\n",
     "print(b)\n",
@@ -525,20 +435,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.0\n",
-      "<class 'float'>\n",
-      "3.0\n",
-      "<class 'float'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 2.0\n",
     "print(a)\n",
@@ -558,19 +457,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.0 <class 'float'>\n",
-      "2000.0 <class 'float'>\n",
-      "2100.0 <class 'float'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 2e0\n",
     "print(a, type(a))\n",
@@ -593,18 +482,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2j <class 'complex'>\n",
-      "(4-3j) <class 'complex'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 2j\n",
     "print(a, type(a))\n",
@@ -622,18 +502,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-3.0\n",
-      "4.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(b.imag)\n",
     "print(b.real)"
@@ -648,17 +519,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(4+3j)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(b.conjugate())"
    ]
@@ -672,17 +535,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(abs(b))"
    ]
@@ -696,17 +551,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "21.6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = -21.6\n",
     "a = abs(a)\n",
@@ -726,17 +573,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "19 <class 'int'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 4\n",
     "b = 15\n",
@@ -753,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -965,17 +804,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "33\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = \"15\"\n",
     "b = \"18\"\n",
@@ -1002,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,14 +849,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "40000\n"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\maxab\\PartIA-Computing-Michaelmas\\03 Types, type conversions and floating point arithmetic.ipynb Cell 74\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/maxab/PartIA-Computing-Michaelmas/03%20Types%2C%20type%20conversions%20and%20floating%20point%20arithmetic.ipynb#ch0000073?line=0'>1</a>\u001b[0m speed_int \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mint32(speed_float)  \u001b[39m# Convert the speed to a 32-bit int\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/maxab/PartIA-Computing-Michaelmas/03%20Types%2C%20type%20conversions%20and%20floating%20point%20arithmetic.ipynb#ch0000073?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(speed_int)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
      ]
     }
    ],
@@ -1044,17 +879,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-25536\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "speed_int = np.int16(speed_float)\n",
     "print(speed_int)"
@@ -1072,17 +899,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "***Error, cannot assign speed to 16-bit int. Will cause overflow.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if abs(speed_float) > np.iinfo(np.int16).max:\n",
     "    print(\"***Error, cannot assign speed to 16-bit int. Will cause overflow.\")\n",
@@ -1139,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1340,36 +1159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5\n",
-      "0.5\n",
-      "0.5\n",
-      "0.5\n",
-      "0.5\n",
-      "0.5\n",
-      "0.5\n",
-      "0.5\n",
-      "0.5\n",
-      "0.5\n",
-      "0.5\n",
-      "0.5\n",
-      "0.5\n",
-      "0.5\n",
-      "0.5\n",
-      "0.5\n",
-      "0.5\n",
-      "0.5\n",
-      "0.5\n",
-      "0.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 0.5\n",
     "for i in range(20):\n",
@@ -1389,33 +1181,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.10000001639127731\n",
-      "0.10000018030405045\n",
-      "0.1000019833445549\n",
-      "0.10002181679010391\n",
-      "0.10023998469114304\n",
-      "0.1026398316025734\n",
-      "0.12903814762830734\n",
-      "0.41941962391138077\n",
-      "3.6136158630251884\n",
-      "38.74977449327707\n",
-      "425.2475194260478\n",
-      "4676.722713686526\n",
-      "51442.949850551784\n",
-      "565871.4483560696\n",
-      "6224584.931916766\n",
-      "68470433.25108442\n",
-      "753174764.7619286\n",
-      "8284922411.381214\n",
-      "91134146524.19336\n",
-      "1002475611765.127\n"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\maxab\\PartIA-Computing-Michaelmas\\03 Types, type conversions and floating point arithmetic.ipynb Cell 96\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/maxab/PartIA-Computing-Michaelmas/03%20Types%2C%20type%20conversions%20and%20floating%20point%20arithmetic.ipynb#ch0000095?line=0'>1</a>\u001b[0m x \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mfloat32(\u001b[39m0.1\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/maxab/PartIA-Computing-Michaelmas/03%20Types%2C%20type%20conversions%20and%20floating%20point%20arithmetic.ipynb#ch0000095?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m20\u001b[39m):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/maxab/PartIA-Computing-Michaelmas/03%20Types%2C%20type%20conversions%20and%20floating%20point%20arithmetic.ipynb#ch0000095?line=2'>3</a>\u001b[0m     x \u001b[39m=\u001b[39m x\u001b[39m*\u001b[39m\u001b[39m11\u001b[39m \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
      ]
     }
    ],
@@ -1452,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,19 +1248,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time error after 100 hours using 16 bit float (s): 87.890625\n",
-      "Time error after 100 hours using 32 bit float (s): 0.005364418029785156\n",
-      "Time error after 100 hours using 64 bit float (s): 0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test with 16 bit float\n",
     "dt = np.float16(0.1)\n",
@@ -1537,7 +1304,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('IA-mich')",
    "language": "python",
    "name": "python3"
   },
@@ -1551,7 +1318,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "683dfc3a7861fe4e99384bd2289c4f961ddf182f3a6be0aa1c496e594572dcb7"
+   }
   }
  },
  "nbformat": 4,
