--- a/Exercises/01 Exercises.ipynb
+++ b/Exercises/01 Exercises.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -33,11 +33,19 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.555555555555557\n"
+     ]
+    }
+   ],
    "source": [
     "T_f = 78\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "T_c = 5*(T_f-32)/9\n",
+    "print(T_c)"
    ]
   },
   {
@@ -85,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -98,12 +106,34 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "248.75\n"
+     ]
+    },
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\maxab\\PartIA-Computing-Michaelmas\\Exercises\\01 Exercises.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/maxab/PartIA-Computing-Michaelmas/Exercises/01%20Exercises.ipynb#ch0000004?line=5'>6</a>\u001b[0m interest \u001b[39m=\u001b[39m interest_year \u001b[39m/\u001b[39m \u001b[39m12\u001b[39m \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/maxab/PartIA-Computing-Michaelmas/Exercises/01%20Exercises.ipynb#ch0000004?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(interest)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/maxab/PartIA-Computing-Michaelmas/Exercises/01%20Exercises.ipynb#ch0000004?line=7'>8</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m()\n",
+      "\u001b[1;31mNotImplementedError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
-    "# Assign data to variables\n",
+    "boe_rate = 0.5e-2\n",
+    "Over_rate = 1.49e-2\n",
     "principal = 150000\n",
     "\n",
-    "# YOUR CODE HERE\n",
+    "interest_year = principal*(boe_rate + Over_rate)\n",
+    "interest = interest_year / 12 \n",
+    "print(interest)\n",
     "raise NotImplementedError()"
    ]
   },
@@ -132,7 +162,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('IA-mich')",
    "language": "python",
    "name": "python3"
   },
@@ -146,7 +176,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "683dfc3a7861fe4e99384bd2289c4f961ddf182f3a6be0aa1c496e594572dcb7"
+   }
   }
  },
  "nbformat": 4,
