--- a/Exercises/03 Exercises.ipynb
+++ b/Exercises/03 Exercises.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -51,10 +51,24 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "a = 100\n",
+    "b = 0.1\n",
+    "c = 0.2\n",
+    "\n",
+    "d_0 = a*b + a*c\n",
+    "d_1 = a*(b + c)\n",
+    "\n",
+    "print (d_0==d_1)\n"
    ]
   },
   {
@@ -115,7 +129,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shortened form Result\n",
+      "65944160.601201027631759643554687500000\n",
+      "Expanded form Result\n",
+      "65944160.601200997829437255859375000000\n",
+      "2.9802322387695312e-08\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10.0\n",
+    "y = 10.1\n",
+    "\n",
+    "f0 = (x + y)**6\n",
+    "f1 = x**6 + 6*(x**5)*(y**1) + 15*(x**4)*(y**2) + 20*(x**3)*(y**3) + 15*(x**2)*(y**4) + 6*(x**1)*(y**5) + y**6\n",
+    "print (\"Shortened form Result\")\n",
+    "print('{0:.30f}'.format(f0))\n",
+    "print(\"Expanded form Result\")\n",
+    "print('{0:.30f}'.format(f1))\n",
+    "\n",
+    "result = f0 - f1\n",
+    "print (result)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -128,13 +175,32 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shortened form Result\n",
+      "0.000000999999999999978778924430\n",
+      "Expanded form Result\n",
+      "0.000000995816662907600402832031\n",
+      "4.183337092378376e-09\n"
+     ]
+    }
+   ],
    "source": [
     "x = 10.0\n",
-    "y = 10.1\n",
+    "y = -10.1\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "f0 = (x + y)**6\n",
+    "f1 = x**6 + 6*(x**5)*(y**1) + 15*(x**4)*(y**2) + 20*(x**3)*(y**3) + 15*(x**2)*(y**4) + 6*(x**1)*(y**5) + y**6\n",
+    "print (\"Shortened form Result\")\n",
+    "print('{0:.30f}'.format(f0))\n",
+    "print(\"Expanded form Result\")\n",
+    "print('{0:.30f}'.format(f1))\n",
+    "\n",
+    "result = f0 - f1\n",
+    "print (result)"
    ]
   },
   {
@@ -170,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -183,13 +249,32 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shortened form Result\n",
+      "65944160.601201027631759643554687500000\n",
+      "Expanded form Result\n",
+      "65944160.601200997829437255859375000000\n",
+      "2.9802322387695312e-08\n"
+     ]
+    }
+   ],
    "source": [
     "x = 10.0\n",
     "y = -10.1\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "f0 = (x + y)**6\n",
+    "f1 = x**6 + 6*(x**5)*(y**1) + 15*(x**4)*(y**2) + 20*(x**3)*(y**3) + 15*(x**2)*(y**4) + 6*(x**1)*(y**5) + y**6\n",
+    "print (\"Shortened form Result\")\n",
+    "print('{0:.30f}'.format(f0))\n",
+    "print(\"Expanded form Result\")\n",
+    "print('{0:.30f}'.format(f1))\n",
+    "\n",
+    "result = f0 - f1\n",
+    "print (result)"
    ]
   },
   {
@@ -245,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -259,10 +344,19 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.000000000000000000000000000000\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "x = 1* 10e7\n",
+    "f = -(((x**2)-1)**(0.5)-x)\n",
+    "print('{0:.30f}'.format(f))"
    ]
   },
   {
@@ -286,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -300,16 +394,25 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.000000000000000000000000000000\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "x = 1* 10e9\n",
+    "f = -(((x**2)-1)**(0.5)-x)\n",
+    "print('{0:.30f}'.format(f))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('IA-mich')",
    "language": "python",
    "name": "python3"
   },
@@ -323,7 +426,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "683dfc3a7861fe4e99384bd2289c4f961ddf182f3a6be0aa1c496e594572dcb7"
+   }
   }
  },
  "nbformat": 4,
