--- a/Exercises/04 Exercises.ipynb
+++ b/Exercises/04 Exercises.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -36,11 +36,22 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
+    "x = 6\n",
     "def is_odd(x):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    y = x % 2\n",
+    "    print (y == 1)\n",
+    "\n",
+    "is_odd (x)\n"
    ]
   },
   {
@@ -169,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -182,10 +193,21 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def area(x0, y0, x1, y1, x2, y2):\n",
+    "    a = (x0 *( y1 - y2 ) + x1 * ( y2 - y0 )+ x2 *( y0 - y1 ))/2\n",
+    "    return abs (a) \n",
+    "\n",
+    "print ( area(0, 0, 0, 3, 4, 0))"
    ]
   },
   {
@@ -510,7 +532,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('IA-mich')",
    "language": "python",
    "name": "python3"
   },
@@ -524,7 +546,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "683dfc3a7861fe4e99384bd2289c4f961ddf182f3a6be0aa1c496e594572dcb7"
+   }
   }
  },
  "nbformat": 4,
